a1/brendan_gordon/TEST_PROGRAMS/invalidtype/remi_bernard/op.min
# invalid string operation
var s: string;
s = s / s;

